2022-11-14  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-07-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* README.md: Use https:// URLs, point to www.rcpp.org
	* man/RcppExamples-package.Rd: Use https:// URL
	* DESCRIPTION: Idem

2021-12-10  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-05-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Add GitHub repo to URL field

2021-01-10  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-08-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2020-08-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/DateExample.cpp (DateExample): Focus on new Date vector

2020-07-31  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add a 'last commit' badge

	* .travis.yml: Update to 'bionic' and R 4.0.*

2019-08-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.9

2019-08-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* DESCRIPTION (Suggests): Remove RUnit as unused
	* .travis.yml: Ditto

2019-08-21  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added dependencies badge

2018-09-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New minor release

	* src/StringVectorExample.cpp (StringVectorExample): Updated with a
	local tolower<>() to not run afoul of the 'C++17 noexcept' warning

	* src/Makevars: No longer need -DRCPP_NEW_DATE_DATETIME_VECTORS
	* src/Makevars.win: Ditto

	* NAMESPACE: Add .registration=TRUE to useDynLib call

	* src/RcppExports.cpp: Regenerated (with registrations)
	* R/RcppExports.R: Also regenerated

2018-09-22  ChrisMuir  <chrismuirRVA@gmail.com>
